# mentat

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  app.py  configurator.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  run.sh
.claude/: CLAUDE.md  settings.json
.claude/hooks/: update-rules.sh
api/: api.py  api_configurator.py  config.py  controller.py  workflow_orchestrator.py
api/agency/: __init__.py  _agent.py  agent_processing_graph.py  coach.py  coaching_session.py  critic.py  intent_detector.py  persona_assessment.py  query_agent.py  semantic_query_agent.py  simple_responder.py  writer.py
app/: app.py
config/: .gitignore  agents.yml  api.yml.example  data.yml  persona.yml  user.yml
configs/: .gitignore  coaching.yml  consolidation.yml  context_management.yml  embedding.yml  ingest.yml  orchestration.yml  quality.yml  rag.yml  search.yml  session_update.yml
data/: .gitignore  data.md
docs/: agent-design.md  agent-interactions.md  coaching-philosophy.md  front-end-design.md  long-term-memory.md  runbook.md
frontend/: app.js  index.html  style.css
man/: run.1
prompts/: coaching-agent.prompt  feedback-agent.prompt  persona-agent.prompt  persona-update.prompt  preprocessing-agent.prompt
queries/: persona_update.yaml
scripts/: gen_favicon.py
src/: agent_flows.py  configurator.py  controller.py
tests/: conftest.py  helpers.py  test_api.py  test_coaching.py  test_config.py  test_context_management.py  test_graph.py  test_neo4j_phase9.py  test_orchestration.py  test_output_testing.py  test_quality.py  test_rag.py  test_search.py  test_session_models.py  test_session_service.py  test_session_update.py
(+131 files in other folders)
