[project]
name = "mentat"
version = "0.1.0"
description = "AI executive coaching chatbot with multi-agent backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "pypdf>=6.7.4",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "langchain-community>=0.4.1",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.10.0",
    "sentence-transformers>=5.2.3",
    "neo4j>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-anyio>=0.0.0",
    "anyio>=4.6.0",
    "ruff>=0.7.0",
    "pyrefly>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mentat"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests requiring real API keys (deselect with '-m not integration')",
]
filterwarnings = [
    # LangChain stores structured output in AIMessage.parsed which is typed None;
    # this is a known upstream issue not fixable in our code.
    "ignore:Pydantic serializer warnings:UserWarning",
]

[tool.pyrefly]
project_includes = ["src"]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pyrefly>=0.54.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
